[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ivhdfe"
version = "0.0.1"
authors = [
    { name = "Dhruv Singal", email="dhruv.singal@columbia.edu" },
]
description = "Package to run linear panel regressions with instrumental variables, high-dimensional fixed-effects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/singaldhruv/ivhdfe"
"Bug Tracker" = "https://github.com/singaldhruv/ivhdfe/issues"
